# image-convolution-engine

./: .gitignore  CMakeLists.txt  bench_wolf.csv  readme.txt
src/bench/: bench_main.cpp  bench_metrics.cpp  bench_metrics.h
src/cli/: io_stb.cpp  io_stb.h  main.cpp
src/core/: convolver.cpp  convolver.h  gaussian.cpp  gaussian.h  gaussian2d.cpp  gaussian2d.h  image.cpp  image.h  kernel.cpp  kernel.h  padding.h
src/tests/: test_image.cpp
tests/: test_convolve2d.cpp  test_image.cpp  test_kernel.cpp  test_padding.cpp
